got web version of audio running

--- a/fsrc/templates/index.html
+++ b/fsrc/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Stock Image Generator</h1>
-    <a href="{{ url_for('audio_recorder') }}">
+    <a href="{{ url_for('audio') }}">
         <button>Go to Audio Recorder</button>
     </a>
 </body>
