--- a/fsrc/templates/audio.html
+++ b/fsrc/templates/audio.html
@@ -13,6 +13,6 @@
     <button id="saveButton" disabled>Save</button><br>
     <audio id="audioPlayback" controls></audio>
 
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ascript.js') }}"></script>
 </body>
 </html>
